replace javafx view with react & webview